--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,5 +11,10 @@
 
 // Custom definitions may go here
 
+
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+
+dependencies {
+    implementation 'org.openftc:rev-extensions-2:1.2'
+}
