--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -6,4 +6,13 @@ dependencies {
     implementation (name: 'WirelessP2p-release', ext:'aar')
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    implementation 'com.acmerobotics.roadrunner:core:0.4.7'
+
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.9'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9'
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.6'
+
 }
