Imported Doge Commande
Ready to use Doge Commander for subsystem goodness!!!!

--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -15,4 +15,6 @@ dependencies {
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.3.6'
 
+    implementation 'com.github.dogecv:dogecommander:v1.0.0'
+
 }
