--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,4 +17,5 @@ apply from: '../build.common.gradle'
 dependencies {
     implementation 'org.openftc:rev-extensions-2:1.2'
     implementation 'org.jdom:jdom2:2.0.6'
+    implementation 'org.openftc:easyopencv:1.3.2'
 }
